--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,13 +16,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
 }
 
 dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:26.0.0'
     implementation 'com.android.support:recyclerview-v7:26.0.0'
-    compile 'com.android.support:support-annotations:28.0.0'
+    implementation 'com.android.support:support-annotations:26.0.0'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -31,4 +35,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:26.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'org.tensorflow:tensorflow-lite:+'
+
 }
