--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,10 +31,14 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    implementation "android.arch.lifecycle:viewmodel:1.1.0"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:cardview-v7:26.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'org.tensorflow:tensorflow-lite:+'
+    implementation 'com.android.support:support-v13:26.0.0'
+    implementation 'com.android.support:design:26.0.0'
 
 }
